<resources>
    <string name="app_name">Namoz vaqtlari</string>
    <string name="namoz_vaqtlari">Namoz vaqtlari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dastur_ishlanmoqda">Dastur ishlanmoqda</string>
    <string name="tashkent">Buxoro</string>
    <string name="_29_10_2023">12.12.2022</string>
    <string name="yakshanba">Shanba</string>
    <string name="quyosh_chiqishi">Quyosh chiqishi</string>
    <string name="asr">Asr</string>
    <string name="peshin">Peshin</string>
    <string name="quyosh">Quyosh</string>
    <string name="subhi_sodiq">Subhi sodiq</string>
    <string name="shom">Shom</string>
    <string name="xufton">Xufton</string>
    <string name="subhanalloh">Subhanalloh</string>
    <string name="alhamdulillah">Alhamdulillah</string>
    <string name="allohu_akbar">Allohu akbar</string>
    <string name="_0">0</string>
    <string name="jami">Jami:</string>
    <string name="_33">/33</string>
</resources>